Removing checkpoints, adding notebook

--- a/jupyter_notebooks/image_viewer.ipynb
+++ b/jupyter_notebooks/image_viewer.ipynb
@@ -1,23 +1,44 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image Viewer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The current version of the image viewer allows for efficient lookup of any of the thousands of DICOM images in the DSB 2017 dataset.  The image viewer does not yet support RAW files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Improvements**\n",
+    "* Add support for RAW files (file format of LUNA images)\n",
+    "* Incorporate whether or not patient has cancer into the display\n",
+    "* For LUNA images, highlight labeled nodes with circle"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from ipywidgets import widgets, interact, interactive, IntSlider\n",
-    "from IPython.display import display\n",
-    "import dicom\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import scipy.ndimage\n",
-    "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "scan_path = os.path.join(os.getcwd(),'stage1')\n",
-    "patients = sorted(os.listdir(scan_path))"
+    "import dicom\n",
+    "import numpy as np\n",
+    "from ipywidgets import widgets, interact, interactive, IntSlider\n",
+    "from IPython.display import display,clear_output\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -28,37 +49,148 @@
    },
    "outputs": [],
    "source": [
-    "patient_list = widgets.Select(description = 'Patients',options = patients)\n",
-    "image_slider = IntSlider(description = \"Image Number\", min = 0)\n",
-    "\n",
-    "patient_path = os.path.join(scan_path,patient_list.value)\n",
-    "image_list = os.listdir(patient_path)\n",
-    "num_scans = len(os.listdir(patient_path))\n",
-    "image_slider.max = num_scans\n",
-    "\n",
-    "img_pixels = dicom.read_file(os.path.join(patient_path,image_list[image_slider.value])).pixel_array\n",
-    "my_img = plt.imshow(img_pixels,cmap=plt.cm.gray)\n",
-    "plt.show()\n",
-    "\n",
-    "def update_image_slider(args):\n",
-    "    patient_path = os.path.join(scan_path,args['new'])\n",
-    "    num_scans = len(os.listdir(patient_path))\n",
-    "    image_list = os.listdir(patient_path)\n",
-    "    image_slider.max = num_scans\n",
-    "    \n",
-    "def view_image(args):\n",
-    "    img = dicom.read_file(os.path.join(patient_path,image_list[int(args['new'])])) \n",
-    "    img_pixels = img.pixel_array\n",
-    "    my_img = plt.imshow(img_pixels,cmap=plt.cm.gray)\n",
-    "    plt.show()\n",
-    "    \n",
-    "    \n",
-    "patient_list.observe(update_image_slider,'value')\n",
-    "image_slider.observe(view_image,'value')\n",
+    "# Load list of all patients\n",
+    "# scan_path = os.path.join(os.getcwd(),'stage1') #Assume this notebook is in the same folder as the data\n",
+    "scan_path = 'E:\\\\DSB 2017\\\\stage1\\\\stage1' #Hard code the location of the data\n",
+    "patients = sorted(os.listdir(scan_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Instantiate Controls\n",
+    "patient_list = widgets.Select(description = 'Patients',options = patients)  # populate the drop down with the sorted list of patients\n",
+    "img_slider = IntSlider(description = \"Image Number\", min = 0) # create image slider and set min = 0; we won't know the max until a patient is selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Function to load a pations data\n",
+    "def load_patient(args = ''):\n",
+    "    patient_path = os.path.join(scan_path,patient_list.value)  #store the path to the selected patient\n",
+    "    global slices\n",
+    "    slices = [dicom.read_file(patient_path + '/' + s) for s in os.listdir(patient_path)] #read in the individual slices\n",
+    "    slices.sort(key = lambda x: int(x.ImagePositionPatient[2])) #sort slices based on vertical position\n",
+    "    img_slider.max = len(slices) - 1 #set the max of the image slider\n",
+    "    plot_img()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot_img(args = ''):\n",
+    "    img = slices[img_slider.value].pixel_array #extract the image data from the selected slice\n",
+    "    clear_output()\n",
+    "    fig, ax = plt.subplots(figsize=(7, 7))\n",
+    "    ax.imshow(img,cmap=plt.cm.gray)\n",
+    "    ax.axes.axis('off')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "patient_list.observe(load_patient,'value')\n",
+    "img_slider.observe(plot_img,'value')\n",
     "\n",
     "display(patient_list)\n",
-    "display(image_slider)"
+    "display(img_slider)\n",
+    "\n",
+    "load_patient()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
