--- a/jupyter_notebooks/image_viewer.ipynb
+++ b/jupyter_notebooks/image_viewer.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "def plot_dicom_img(args = ''):\n",
     "    dicom_img = dicom_slices[dicom_img_slider.value].pixel_array #extract the image data from the selected slice\n",
-    "    clear_output()\n",
+    "    clear_output(wait = True)\n",
     "    fig, ax = plt.subplots(figsize=(7, 7))\n",
     "    ax.imshow(dicom_img,cmap=plt.cm.gray)\n",
     "    ax.axes.axis('off')"
@@ -209,7 +209,7 @@
    "source": [
     "def plot_raw_img(args = ''):\n",
     "    raw_img = raw_slices[raw_img_slider.value] #extract the image data from the selected slice\n",
-    "    clear_output()\n",
+    "    clear_output(wait = True)\n",
     "    fig, ax = plt.subplots(figsize=(7, 7))\n",
     "    ax.imshow(raw_img,cmap=plt.cm.gray)\n",
     "    ax.axes.axis('off')"
