--- a/jupyter_notebooks/image_viewer_v2.ipynb
+++ b/jupyter_notebooks/image_viewer_v2.ipynb
@@ -73,8 +73,17 @@
     "                         #description = \"Play CT scan\",\n",
     "                         #disabled = False)\n",
     "#The above play_scan button was an attempt to create a play button to \"play\" the CT scans, but we have to figure out how to slow down the playing of images so the images have enough time to render on the screen; right now the player moves too quickly\n",
-    "#Also, for asthetics, it would be great if the pictures would fade in and out instead of flashing like they do\n",
-    "\n",
+    "#Also, for asthetics, it would be great if the pictures would fade in and out instead of flashing like they do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Function to load a patient's data\n",
     "def load_dicom_patient(args = ''):\n",
     "    dicom_patient_path = os.path.join(dicom_path,dicom_patients[dicom_patient_list.options.index(dicom_patient_list.value)])  #store the path to the selected patient.\n",
@@ -83,7 +92,7 @@
     "    dicom_slices = [dicom.read_file(dicom_patient_path + '/' + s) for s in os.listdir(dicom_patient_path)] #read in the individual slices\n",
     "    dicom_slices.sort(key = lambda x: int(x.ImagePositionPatient[2])) #sort slices based on vertical position\n",
     "    dicom_img_slider.max = len(dicom_slices) - 1 #set the max of the image slider\n",
-    "    play_scan.max = len(dicom_slices) - 1 #set the max of the play_scan widget\n",
+    "    #play_scan.max = len(dicom_slices) - 1 #set the max of the play_scan widget\n",
     "    plot_dicom_img()\n",
     "    \n",
     "def plot_dicom_img(args = ''):\n",
@@ -171,8 +180,17 @@
     "combined_raw_list = [x+y+z for x,y,z in zip(raw_patients_indexlist, LUNA16_cancer, raw_patients)]\n",
     "        \n",
     "raw_patient_list = widgets.Select(description = 'Patients',options = combined_raw_list)  # populate the drop down with the sorted list of patients\n",
-    "raw_img_slider = IntSlider(description = \"Image Number\", min = 0) # create image slider and set min = 0; we won't know the max until a patient is selected\n",
-    "\n",
+    "raw_img_slider = IntSlider(description = \"Image Number\", min = 0) # create image slider and set min = 0; we won't know the max until a patient is selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "def load_raw_patient(args = ''):\n",
     "    raw_patient_path = os.path.join(raw_path,raw_patients[raw_patient_list.options.index(raw_patient_list.value)]+'.mhd')  #store the path to the selected patient\n",
     "    global raw_slices\n",
