--- a/jupyter_notebooks/image_viewer_v4.ipynb
+++ b/jupyter_notebooks/image_viewer_v4.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -37,25 +37,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#Load necessary packages\n",
     "import os\n",
     "import dicom\n",
     "import SimpleITK as sitk\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipywidgets import widgets, interact, interactive, IntSlider#, Layout\n",
+    "from ipywidgets import widgets, interact, interactive, IntSlider\n",
     "from IPython.display import display,clear_output\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# Load list of all patients\n",
+    "from matplotlib.patches import Circle\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Hard coded paths\n",
     "dicom_path = 'E:/DSB 2017/stage1/stage1' #Hard code the location of the stage1 data \n",
+    "stage1_labels_path = 'E:/DSB 2017/stage1_labels.csv'\n",
+    "raw_path = 'E:/LUNA16' #Hard code the location of the data\n",
+    "annotations_path = \"E:/LUNA16/annotations.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Load list of all patients\n",
+    "\n",
     "dicom_patients = sorted(os.listdir(dicom_path))\n",
     "dicom_patients_indexlist = [str(patientindex) + ': ' for patientindex in range(0, len(dicom_patients))]#I made this list because I wanted to prepend the list of patients with their numerical id\n",
-    "stage1_labels = pd.read_csv('E:/DSB 2017/stage1_labels.csv', header = 0) #hard code the location of your stage1_labels.csv file\n",
+    "stage1_labels = pd.read_csv(stage1_labels_path, header = 0) #hard code the location of your stage1_labels.csv file\n",
     "stage1_cancer = []\n",
     "for s in stage1_labels.cancer:\n",
     "    if s == 1: \n",
@@ -75,6 +101,17 @@
     "                         #disabled = False)\n",
     "#The above play_scan button was an attempt to create a play button to \"play\" the CT scans, but we have to figure out how to slow down the playing of images so the images have enough time to render on the screen; right now the player moves too quickly\n",
     "#Also, for asthetics, it would be great if the pictures would fade in and out instead of flashing like they do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "os.path.join(dicom_path,dicom_patients[dicom_patient_list.options.index(dicom_patient_list.value)])"
    ]
   },
   {
@@ -140,25 +177,13 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import dicom\n",
-    "import SimpleITK as sitk\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from ipywidgets import widgets, interact, interactive, IntSlider\n",
-    "from IPython.display import display,clear_output\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Circle\n",
-    "%matplotlib inline\n",
-    "\n",
-    "raw_path = 'E:/LUNA16' #Hard code the location of the data\n",
     "all_files = os.listdir(raw_path)\n",
     "raw_patients = [i for i in all_files if '.mhd' in i]\n",
     "raw_patients = sorted(raw_patients)\n",
     "raw_patients = [i[:-4] for i in raw_patients] #I did this to remove the \".mhd\" from the end of each of the patients numbers, just an aesthetic\n",
     "raw_patients_indexlist = [str(patientindex) + ': ' for patientindex in range(0, len(raw_patients))]\n",
     "\n",
-    "cancer_annotations = pd.read_csv(\"E:/LUNA16/annotations.csv\", header = 0)#Hard code the location of the annotations file\n",
+    "cancer_annotations = pd.read_csv(annotations_path, header = 0)#Hard code the location of the annotations file\n",
     "cancerannotations_list = sorted(list(set(cancer_annotations['seriesuid'].tolist())))\n",
     "LUNA16_cancer = []\n",
     "for i in raw_patients:\n",
@@ -214,12 +239,14 @@
     "    plot_raw_img()\n",
     "    \n",
     "def plot_raw_img(args = ''):\n",
+    "    clear_output()\n",
     "    raw_img = raw_slices_array[raw_img_slider.value] #extract the image data from the selected slice\n",
-    "    clear_output(wait = True)\n",
+    "\n",
     "    patient_annotations_transform = get_cancer_coordinates()\n",
     "    fig, ax = plt.subplots(figsize=(7, 7))\n",
     "    ax.imshow(raw_img,cmap=plt.cm.gray)\n",
     "    ax.axes.axis('off')\n",
+    "    \n",
     "    if not patient_annotations_transform.empty:\n",
     "        #cancer_labels.value = \"Slice number(s) of malignant tumors: \"+', '.join([str(i) for i in sorted([int(i) for i in patient_annotations_transform.coordZ.values])]) #this line sets the value of the tumor slice label\n",
     "        print \"Slice number(s) of malignant tumors: \"+', '.join([str(i) for i in sorted([int(i) for i in patient_annotations_transform.coordZ.values])]) #this line sets the value of the tumor slice label\n",
@@ -232,7 +259,7 @@
     "                ax.add_patch(circ)\n",
     "                #the above for loop creates a circle, from the correctly ordered x, y, and radius coordinates, that outlines the malignant tumor in red\n",
     "    else: \n",
-    "        print \"This patient does not have malignant tumor cells\"\n"
+    "        print \"This patient does not have malignant tumor cells\""
    ]
   },
   {
