--- a/jupyter_notebooks/image_viewer_v4.ipynb
+++ b/jupyter_notebooks/image_viewer_v4.ipynb
@@ -278,7 +278,7 @@
     "    plot_raw_img()\n",
     "    \n",
     "def plot_raw_img(args = ''):\n",
-    "    clear_output()\n",
+    "    clear_output(wait = True)\n",
     "    raw_img = raw_slices_array[raw_img_slider.value] #extract the image data from the selected slice\n",
     "\n",
     "    patient_annotations_transform = get_cancer_coordinates()\n",
